--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-If you're reading this you probably just started working in the Volatiles department at EMAX Laboratories. Most likely you're reading SOPs for the first day (or two...or three...or week...). This isn't meant to replace training entirely so much as just give a brief overview of what you'll be doing in this department (so that you're already semi-familiarized with the general idea of how things work before you officially start working on the instruments).
+The files here will be entirely text-based. These will probably be more complex in nature and assume you already know the basics when it comes to the work. If you're new new, then read the wiki first.
