--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-The files here will be entirely text-based. These will probably be more complex in nature and assume you already know the basics when it comes to the work. If you're new new, then read the wiki first.
+Quick references for running analyses or looking up directory paths.
